# Test-Applications

./: LICENSE
.github/toolchains/: GCC-8-GNU.cmake  GCC-8-ISO.cmake  GCC-9-GNU.cmake  GCC-9-ISO.cmake
.github/workflows/: cmake.yml  release.yml  windows.yml
CL-BLAS/: CMakeLists.txt
CL-CPP/: CL-CPP.cpp  CL-CPP.hpp  CMakeLists.txt  saxpy.cl
CL-CPP-SAXPY/: CL-CPP-SAXPY.cpp  CMakeLists.txt  saxpy.cl
CL-CPP-SAXPY-AMDGCN/: CL-CPP-SAXPY-AMDGCN.cpp  CMakeLists.txt  saxpy.clcpp
CL-CPP-SAXPY-SPV/: CL-CPP-SAXPY-SPV.cpp  CMakeLists.txt  saxpy.cl
CL-CPP/include/: CL-CPP-config.in.hpp  CL-CPP.hpp
CL-CPP/kernel/: saxpy.cl
CL-CPP/source/: CL-CPP.cpp
CL-FFT/: CMakeLists.txt
CL-FFT/inc/: Header.hpp
CL-FFT/src/: Source.cpp
CL-Include/: CMakeLists.txt
CL-Include/include/: CL-Include-config.in.hpp  CL-Include.hpp  Options.hpp
CL-Include/kernel/: kernel.cl
CL-Include/source/: CL-Include.cpp  Options.cpp
CPP-Filesystem/: CMakeLists.txt  CMakelists.txt
CPP-Filesystem/source/: CPP-Filesystem.cpp
CPP-PLplot/: CMakeLists.txt  CPP-PLplot.cpp
CUDA-Enum/: CMakeLists.txt
CUDA-SAXPY/: CMakeLists.txt  CUDA.cpp  CUDA.hpp  Kernel.cu  Kernel.hpp  Main.cpp  Options.cpp  Options.hpp
DX12-SAXPY/: CMakeLists.txt  DX12.hpp  Main.cpp  Options.cpp  Options.hpp  SAXPY.hlsl
HIP-SAXPY/: CMakeLists.txt  Main.cpp  Main.hip
SYCL-GenericLambda/: CMakeLists.txt  Main.cpp
SYCL-KernelFunctorQuery/: CMakeLists.txt  Main.cpp
SYCL-LazyAccessor/: CMakeLists.txt  Main.cpp
SYCL-LazySAXPY/: CMakeLists.txt  Main.cpp  Options.cpp
SYCL-MultiCompilationUnit/: CMakeLists.txt  Main.cpp  Other.cpp
SYCL-MultiCompilationUnit/cmake/Modules/: FindComputeCpp.cmake
SYCL-PlaceholderAccessor/: CMakeLists.txt  Main.cpp
SYCL-Reduce/: CMakeLists.txt  Main.cpp  Reduce.hpp
SYCL-SAXPY/: CMakeLists.txt  Main.cpp
SYCL-SAXPY/cmake/Modules/: FindComputeCpp.cmake
